--- a/helm-charts/kuma/templates/deployment.yaml
+++ b/helm-charts/kuma/templates/deployment.yaml
@@ -18,14 +18,20 @@ spec:
         - name: kuma-cp
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: "{{ .Values.image.pullPolicy }}"
+          command: ["kuma-cp"]
+          args: ["run"]
           ports:
             - containerPort: 5681
+              name: admin
             - containerPort: 5682
+              name: grpc
           env:
             - name: KUMA_CONTROL_PLANE_GUI
               value: "true"
             - name: KUMA_DNS_SERVER
               value: "kuma-dns.kuma-system.svc.cluster.local"
+            - name: KUMA_MODE
+              value: "standalone"
           resources:
             limits:
               cpu: "500m"
