--- a/argocd/kuma-argocd-app.yaml
+++ b/argocd/kuma-argocd-app.yaml
@@ -8,7 +8,7 @@ spec:
   project: poc-1
   source:
     repoURL: https://github.com/JaimeHenaoChallange/kuma-repo.git
-    targetRevision: main # Cambia esto a la rama que deseas usar
+    targetRevision: main
     path: helm-charts/kuma
   destination:
     server: https://kubernetes.default.svc
