feat: fix deployment

--- a/helm-charts/kuma/templates/deployment.yaml
+++ b/helm-charts/kuma/templates/deployment.yaml
@@ -16,7 +16,7 @@ spec:
         app: kuma
         component: control-plane
     spec:
-      serviceAccountName: kuma-control-plane # Asociar el ServiceAccount
+      serviceAccountName: kuma-control-plane
       containers:
         - name: kuma-cp
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
